<resources>
    <string name="app_name">CRUD Trabalho</string>
    <string name="crud_da_galera">CRUD da Galera</string>
    <string name="listar_editar_ou_excluir">Listar - Editar ou Excluir</string>
    <string name="computa_o_m_vel">Computação Móvel</string>
    <string name="igor">Igor</string>
    <string name="valdemar">Valdemar</string>
    <string name="luis">Luis</string>
    <string name="guilherme">Guilherme</string>
    <string name="sair">Sair</string>
    <string name="inserir_novo">Inserir novo</string>
    <string name="detalhes_do_aluno">Detalhes do Aluno</string>
    <string name="editar">Editar</string>
    <string name="excluir_registro">Excluir registro</string>
    <string name="campus">Campus:</string>
    <string name="nome">Nome:</string>
    <string name="curso">Curso:</string>
    <string name="dados_do_aluno">Dados do Aluno</string>
    <string name="id">ID:</string>
    <string name="ra">RA:</string>
    <string name="salvar">Salvar</string>
    <string name="informe_o_ra">Informe o ra</string>
    <string name="informe_o_curso">Informe o curso</string>
    <string name="inserir_novo_registro">Inserir novo registro</string>
    <string name="informe_o_nome">Informe o nome</string>
    <string name="informe_o_campus">Informe o campus</string>
    <string name="inserir">Inserir</string>
    <string name="alunos_cadastrados">Alunos Cadastrados</string>
    <string name="Gerenciador_de_alunos">Gerenciador de Alunos </string>
    <string name="luiz">Luiz</string>
    <string name="valdemar_dos_reis_oliveira_419120208">Valdemar dos Reis Oliveira 419120208</string>
    <string name="igor_nunes_rosseto_409101117">Igor Nunes Rosseto 409101117</string>
    <string name="luiz_alberto_perez_j_nior_3016107194">Luiz Alberto Perez Júnior 3016107194</string>
    <string name="guilherme_ramos_916111476">Guilherme Ramos 916111476</string>
</resources>
