<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".crud.MainActivity">

    <Button
        android:id="@+id/btMainInsert"
        android:layout_width="243dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="#DC00BCD4"
        android:fontFamily="@font/advent_pro"
        android:text="@string/inserir_novo"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btMainList"
        android:layout_width="243dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#DC00BCD4"
        android:fontFamily="@font/advent_pro"
        android:text="@string/listar_editar_ou_excluir"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainInsert" />

    <Button
        android:id="@+id/btMainExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8D36CC00"
        android:fontFamily="@font/advent_pro"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/advent_pro"
        android:text="@string/Gerenciador_de_alunos"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="371dp"
        android:layout_height="32dp"
        android:text="@string/valdemar_dos_reis_oliveira_419120208"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainExit"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:text="@string/guilherme_ramos_916111476"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainExit"
        app:layout_constraintVertical_bias="0.647" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="365dp"
        android:layout_height="34dp"
        android:text="@string/igor_nunes_rosseto_409101117"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainExit"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:text="@string/computa_o_m_vel"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainExit"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="382dp"
        android:layout_height="29dp"
        android:text="@string/luiz_alberto_perez_j_nior_3016107194"
        android:textAlignment="center"
        android:textColor="#F2FCFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainExit"
        app:layout_constraintVertical_bias="0.521" />
</androidx.constraintlayout.widget.ConstraintLayout>