<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".crud.MainActivity">

    <Button
        android:id="@+id/btInserir"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#8D36CC00"
        android:fontFamily="@font/advent_pro"
        android:text="@string/inserir"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurso" />

    <EditText
        android:id="@+id/editCurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/informe_o_curso"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="#F7F6F6"
        android:textColorHint="#FDFFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editCampus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/informe_o_campus"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="#F7F6F6"
        android:textColorHint="#FDFFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurso" />

    <EditText
        android:id="@+id/editRa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/informe_o_ra"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#F7F6F6"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/informe_o_nome"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="#F7F6F6"
        android:textColorHint="#FDFFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="355dp"
        android:layout_height="84dp"
        android:fontFamily="@font/advent_pro"
        android:text="@string/inserir_novo_registro"
        android:textAlignment="center"
        android:textColor="#F7F6F6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editRa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>